--- a/comics/148/index.html
+++ b/comics/148/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #148: Favorite Drink</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #148: Favorite Drink" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/148" />
+    <meta property="og:image" content="https://comicss.art/comics/148/thumb.png" />
+    <meta property="og:description" content="What is web developers' favorite drink? :root beer" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/148">
+    <meta name="twitter:title" content="comiCSS #148: Favorite Drink">
+    <meta name="twitter:description" content="What is web developers' favorite drink? :root beer">
+    <meta name="twitter:image" content="https://comicss.art/comics/148/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel=canonical href=https://comicss.art />
+    <link rel="canonical" href="https://comicss.art/comics/148" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/149" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="What is web developers' favorite drink? :root beer">
+      <div id="comic-strip" role="img" class="" aria-label="What is web developers' favorite drink? :root beer">
         <img src="/comics/148/148-favorite-drink-0.webp" alt="" width="350" />
       </div>
 
@@ -164,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/149" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,8 +178,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/148">https://comicss.art/comics/148</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/148/favorite-drink.png">https://comicss.art/comics/148/favorite-drink.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/148">https://comicss.art/comics/148</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/148/favorite-drink.png">https://comicss.art/comics/148/favorite-drink.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/148/favorite-drink.html" rel="alternate">https://comicss.art/comics/148/favorite-drink.html</a></p>
 
       <hr />
@@ -218,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-09-02"></script>
+    <script>let postId = 148;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
