--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Favorite Drink</h1>
+      <h1>Great Dancers</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/147" rel="prev">
+        <a href="/comics/148" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -139,8 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="What is web developers' favorite drink? :root beer">
-        <img src="/comics/148/148-favorite-drink-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="Why are CSS Developers great dancers? Because they know all the steps()">
+        <img src="/comics/149/149-great-dancers-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,7 +150,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/147" rel="prev">
+        <a href="/comics/148" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/148">https://comicss.art/comics/148</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/148/favorite-drink.png">https://comicss.art/comics/148/favorite-drink.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/148/favorite-drink.html" rel="alternate">https://comicss.art/comics/148/favorite-drink.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/149">https://comicss.art/comics/149</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/149/great-dancers.png">https://comicss.art/comics/149/great-dancers.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/149/great-dancers.html" rel="alternate">https://comicss.art/comics/149/great-dancers.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,7 +219,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-09-02"></script>
+    <script src="/js/data.js?last-updated=2024-09-04"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
