--- a/comics/192/index.html
+++ b/comics/192/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #192: CSS Nightmare</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #192: CSS Nightmare" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/192" />
+    <meta property="og:image" content="https://comicss.art/comics/192/thumb.png" />
+    <meta property="og:description" content="comic with 4 panels in a 2x2 grid. Two characters talk: one says 'last night I dreamed that all CSS frameworks disappeared and web developers could only code using vanilla CSS'. The second person replies 'Oh, my! That sounds awful! What a terrible nightmare!' The first person first surprised, then ashamed says 'yes... of course... a nightmare...'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/192">
+    <meta name="twitter:title" content="comiCSS #192: CSS Nightmare">
+    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid. Two characters talk: one says 'last night I dreamed that all CSS frameworks disappeared and web developers could only code using vanilla CSS'. The second person replies 'Oh, my! That sounds awful! What a terrible nightmare!' The first person first surprised, then ashamed says 'yes... of course... a nightmare...'">
+    <meta name="twitter:image" content="https://comicss.art/comics/192/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/192" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/193" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid. Two characters talk: one says 'last night I dreamed that all CSS frameworks disappeared and web developers could only code using vanilla CSS'. The second person replies 'Oh, my! That sounds awful! What a terrible nightmare!' The first person first surprised, then ashamed says 'yes... of course... a nightmare...'">
+      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid. Two characters talk: one says 'last night I dreamed that all CSS frameworks disappeared and web developers could only code using vanilla CSS'. The second person replies 'Oh, my! That sounds awful! What a terrible nightmare!' The first person first surprised, then ashamed says 'yes... of course... a nightmare...'">
         <img src="/comics/192/192-css-nightmare-0.webp" alt="" width="350" />
         <img src="/comics/192/192-css-nightmare-1.webp" alt="" width="350" />
         <img src="/comics/192/192-css-nightmare-2.webp" alt="" width="350" />
@@ -167,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/193" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,8 +181,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/192">https://comicss.art/comics/192</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/192/css-nightmare.png">https://comicss.art/comics/192/css-nightmare.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/192">https://comicss.art/comics/192</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/192/css-nightmare.png">https://comicss.art/comics/192/css-nightmare.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/192/css-nightmare.html" rel="alternate">https://comicss.art/comics/192/css-nightmare.html</a></p>
 
       <hr />
@@ -221,8 +221,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-06-19"></script>
+    <script>let postId = 192;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
