--- a/comics/194/index.html
+++ b/comics/194/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #194: Independence Day (I)</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #194: Independence Day (I)" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/194" />
+    <meta property="og:image" content="https://comicss.art/comics/194/thumb.png" />
+    <meta property="og:description" content="Comic strip with 3 panels. The first one happens on July 4, 2025, the IE logo is smiling while saying 'Happy Independence Day! Because you cannot write independence without IE! I'm back, baby!' The second panel has the Chrome and Safari logos looking disgusted and disappointed. The third panel is happening on July 4, 2026, the Chrome and Safari logos cheerfully saying 'Happy Autonomy Day!' while an angry IE logo is seeing in a corner of the panel saying 'jerks!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/194">
+    <meta name="twitter:title" content="comiCSS #194: Independence Day (I)">
+    <meta name="twitter:description" content="Comic strip with 3 panels. The first one happens on July 4, 2025, the IE logo is smiling while saying 'Happy Independence Day! Because you cannot write independence without IE! I'm back, baby!' The second panel has the Chrome and Safari logos looking disgusted and disappointed. The third panel is happening on July 4, 2026, the Chrome and Safari logos cheerfully saying 'Happy Autonomy Day!' while an angry IE logo is seeing in a corner of the panel saying 'jerks!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/194/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/194" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Independence Day (II)</h1>
+      <h1>Independence Day (I)</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/194" rel="prev">
+        <a href="/comics/193" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/117">
+        <a class="random-post" href="/comics/115">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/195" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,9 +139,10 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Comic strip with 2 panels, the first one has a cheerful IE logo saying 'Happy Independence Day! Because you cannot write independence without IE! I am back, baby!' The second panel has many speech bubbles from characters off-panel saying 'Neither inefficient... or embarrassing... or inferior... or asinine... weird... simpleton... retired... ancient...' And a disappointed looking IE logo replies 'OK... I get it! I'll leave now'">
-        <img src="/comics/195/195-independence-day-ii-0.webp" alt="" width="350" />
-        <img src="/comics/195/195-independence-day-ii-1.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="Comic strip with 3 panels. The first one happens on July 4, 2025, the IE logo is smiling while saying 'Happy Independence Day! Because you cannot write independence without IE! I'm back, baby!' The second panel has the Chrome and Safari logos looking disgusted and disappointed. The third panel is happening on July 4, 2026, the Chrome and Safari logos cheerfully saying 'Happy Autonomy Day!' while an angry IE logo is seeing in a corner of the panel saying 'jerks!'">
+        <img src="/comics/194/194-independence-day-i-0.webp" alt="" width="350" />
+        <img src="/comics/194/194-independence-day-i-1.webp" alt="" width="350" />
+        <img src="/comics/194/194-independence-day-i-2.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,13 +152,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/194" rel="prev">
+        <a href="/comics/193" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/102">
+        <a class="random-post" href="/comics/41">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -165,7 +166,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/195" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,9 +180,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/195">https://comicss.art/comics/195</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/195/independence-day-ii.png">https://comicss.art/comics/195/independence-day-ii.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/195/independence-day-ii.html" rel="alternate">https://comicss.art/comics/195/independence-day-ii.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/194">https://comicss.art/comics/194</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/194/independence-day-i.png">https://comicss.art/comics/194/independence-day-i.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/194/independence-day-i.html" rel="alternate">https://comicss.art/comics/194/independence-day-i.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,8 +220,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-07-04"></script>
+    <script>let postId = 194;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
