--- a/comics/195/index.html
+++ b/comics/195/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #195: Independence Day (II)</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #195: Independence Day (II)" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/195" />
+    <meta property="og:image" content="https://comicss.art/comics/195/thumb.png" />
+    <meta property="og:description" content="Comic strip with 2 panels, the first one has a cheerful IE logo saying 'Happy Independence Day! Because you cannot write independence without IE! I am back, baby!' The second panel has many speech bubbles from characters off-panel saying 'Neither inefficient... or embarrassing... or inferior... or asinine... weird... simpleton... retired... ancient...' And a disappointed looking IE logo replies 'OK... I get it! I'll leave now'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/195">
+    <meta name="twitter:title" content="comiCSS #195: Independence Day (II)">
+    <meta name="twitter:description" content="Comic strip with 2 panels, the first one has a cheerful IE logo saying 'Happy Independence Day! Because you cannot write independence without IE! I am back, baby!' The second panel has many speech bubbles from characters off-panel saying 'Neither inefficient... or embarrassing... or inferior... or asinine... weird... simpleton... retired... ancient...' And a disappointed looking IE logo replies 'OK... I get it! I'll leave now'">
+    <meta name="twitter:image" content="https://comicss.art/comics/195/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/195" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/196" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Comic strip with 2 panels, the first one has a cheerful IE logo saying 'Happy Independence Day! Because you cannot write independence without IE! I am back, baby!' The second panel has many speech bubbles from characters off-panel saying 'Neither inefficient... or embarrassing... or inferior... or asinine... weird... simpleton... retired... ancient...' And a disappointed looking IE logo replies 'OK... I get it! I'll leave now'">
+      <div id="comic-strip" role="img" class="" aria-label="Comic strip with 2 panels, the first one has a cheerful IE logo saying 'Happy Independence Day! Because you cannot write independence without IE! I am back, baby!' The second panel has many speech bubbles from characters off-panel saying 'Neither inefficient... or embarrassing... or inferior... or asinine... weird... simpleton... retired... ancient...' And a disappointed looking IE logo replies 'OK... I get it! I'll leave now'">
         <img src="/comics/195/195-independence-day-ii-0.webp" alt="" width="350" />
         <img src="/comics/195/195-independence-day-ii-1.webp" alt="" width="350" />
       </div>
@@ -165,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/196" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,8 +179,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/195">https://comicss.art/comics/195</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/195/independence-day-ii.png">https://comicss.art/comics/195/independence-day-ii.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/195">https://comicss.art/comics/195</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/195/independence-day-ii.png">https://comicss.art/comics/195/independence-day-ii.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/195/independence-day-ii.html" rel="alternate">https://comicss.art/comics/195/independence-day-ii.html</a></p>
 
       <hr />
@@ -219,8 +219,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-07-04"></script>
+    <script>let postId = 195;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
